--- a/index.html
+++ b/index.html
@@ -10,32 +10,30 @@
 
    <header>
           <div class="site-header-container container">
-              <a class="header-logo" href="#">
+              <a class="header-logo" href="index.html">
                   <img class="header-img" src="img/myteam_logo.svg" alt="myteam_logo" width="160" height="40">
               </a> 
               <nav class="header-nav">
                   <ul class="header-inner">
                       <li class="header-item">
-                          <a class="nav-item" href="">
+                          <a class="nav-item" href="index.html">
                             home
                           </a>
                       </li>
                       <li class="header-item">
-                          <a class="nav-item" href="">
+                          <a class="nav-item" href="about.html">
                             about
                           </a>
                       </li>
                   </ul>
               </nav>
-              <button class="btn">
-                contact us
-              </button>
+
+              <a class="btn" href="contact.html">contact us</a>
               <button class="hamburger"><img src="img/hamburger.svg" alt="hamburger"></button>
           </div>
    </header>
   
    <main>
-
 
     <section class="find">
       <div class="find-container container">
@@ -169,7 +167,6 @@
       </div>
   </section>
 
-
    </main>
 
    <footer>
@@ -177,12 +174,12 @@
       <div class="footer-container container">
         
         <div class="footer-nav">
-          <a class="footer-logo" href="#">
+          <a class="footer-logo" href="index.html">
             <img src="img/myteam_logo.svg" alt="myteam_logo " width="160" height="40">
           </a>
           <nav class="footer-navigation">
-            <a class="nav-link" href="#">home</a>
-            <a class="nav-link" href="#">about</a>
+            <a class="nav-link" href="index.html">home</a>
+            <a class="nav-link" href="about.html">about</a>
           </nav>
         </div>
 
