--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <a class="btn" href="contact.html">contact us</a>
               <button class="hamburger"><img src="img/hamburger.svg" alt="hamburger"></button>
           </div>
-   </header>
-  
+   </header> 
+
    <main>
 
     <section class="find">
@@ -95,7 +95,7 @@
     </section>
 
     <section class="stories">
-     <div class="stories-container">
+     <div class="stories-container container">
       <h2 class="stories_heading">
         Delivering real results for top companies. Some of our <span class="stories_color">success stories.</span>
       </h2>
@@ -165,7 +165,7 @@
           </h2>
           <a class="ready-btn" href="contact.html">contact us</a>
       </div>
-  </section>
+    </section>
 
    </main>
 
